--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ google-cloud-storage==2.7.0
 google-cloud-secret-manager==2.1.0
 
 firebase-admin==5.0.0
-firebae_admin==5.0.0
+firebase_admin==5.0.0
