--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ google-cloud-storage==2.7.0
 
 google-cloud-secret-manager==2.1.0
 
-firebase-admin==5.0.0
-firebase_admin==5.0.0
+firebase-admin==6.1.0
+SQLAlchemy==2.0.4
+pg8000==1.24.2
